# BitwardenReusedPasswords

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: main.rs  parser.rs  types.rs
