[package]
name = "bitwarden_reused_passwords"
version = "0.1.0"
authors = ["Tobias de Bruijn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"

[profile.release]
overflow-checks = true
