[package]
name = "bitwarden_reused_passwords"
version = "0.1.0"
authors = ["Tobias de Bruijn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
clap = "2.33.3"
anyhow = "1.0.44"
termcolor = "1.1.2"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[profile.release]
overflow-checks = true
lto = true
panic = "abort"
