[package]
name = "bitwarden_checker"
version = "0.2.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

[dependencies]
serde_json = "1.0.68"
clap = "2.33.3"
anyhow = "1.0.44"
termcolor = "1.1.2"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[profile.release]
lto = true
panic = "abort"
